  * scsi-linux-sg.c: skipping unallowed devices, cleanup/consolidation of the
    old workaround(s) for ATA now for SCSI too
  * renamed error function to schily_error because it started to wreak random
    havoc after harmless header moving (conflict with incompatible GNU version)
  * restored scsi-remote.c compilation, moved to libscg sources, used instead
    of rdummy.c

  [ Eugen Dedu ]
  * corrections and constructive help on cdda2ogg

  [ Vladimir Nadvornik ]
  * enabled CLONE feature in wodim's config

  [ Modestas Vainius ]
  * dropped . from the include path and fixed mkisofs source to use the local
    headers

  [ Lorenz Minder ]
  * Fix of the joliet_strlen signature
  * Code refactoring around *cvt* declarations to make the conditional
    compilation more reliable, especially on BSD and AIX
  * include/utypes.h: guard to preserve SIZE_T_MAX

  [ Christian Fromme ]
  * detailed review and correction of author related data in manpages and
    README files

  [ Peter Samuelson, Tollef Fog Heen ]
  * typo and grammar fixes in mkisofs.8
  * Remove several instances of %r in printf-like statements, in
    preparation for removing the libschily format-string implementation

 -- Eduard Bloch <blade@debian.org>  Wed,  6 Sep 2006 22:05:30 +0200

cdrkit (1.0pre4) RELEASED; urgency=low

  [ Eduard Bloch ]
  * Added checks for libcam to make (k)FreeBSD compilation work (untested)
  * added clarifications about changes to all source files
  * adapted initial message to display the copyright more clearly
  * adapted copyright and contact information in scgcheck manpage
  * adapted contact information in btcflash manpage, also added a reference to
    its original author which has been missing

  [ Peter Samuelson ]
  * Cleanups: unused macros/defines
  * Unified and simplified the build-host data crawling methods
  
  [ Juergen Weigert ]
  * Various documentation corrections, replaced cdrecord->wodim where it is
    appropriate and legal on many visible locations
