@@ -14,6 +14,7 @@ cdrkit (5:1.0~pre5-1) unstable; urgency=low
     them, old "convinience" symlinks, preinstalls user-modified files to the
     new target locations /etc/{wodim,rscsi}.conf 
     (closes: #388403, #390084, #388119, #387854)
+  * option (env. variable) to skip DMA tests (closes: #293953)
 
  -- Eduard Bloch <blade@debian.org>  Mon, 06 Nov 2006 10:47:33 +0100
 
