@@ -19,6 +19,7 @@ cdrkit (1.0pre5) UNRELEASED; urgency=low
     havoc after harmless header moving (conflict with incompatible GNU version)
   * restored scsi-remote.c compilation, moved to libscg sources, used instead
     of rdummy.c
+  * added optional omiting of DMA speed tests
 
   [ Eugen Dedu ]
   * corrections and constructive help on cdda2ogg
